<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="362dp"
            android:layout_height="64dp"
            android:background="@drawable/lgn_btn"
            android:text=""
            android:hint="@string/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.889" />

        <Button
            android:id="@+id/signin"
            android:layout_width="381dp"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/e_user"
            android:layout_width="354dp"
            android:layout_height="72dp"
            android:autofillHints=""
            android:background="@drawable/username"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/e_pass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.605" />

        <EditText
            android:id="@+id/e_pass"
            android:layout_width="354dp"
            android:layout_height="75dp"
            android:background="@drawable/password"
            android:ems="10"
            android:hint=""
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="303dp"
            android:layout_height="177dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/reset"
            android:layout_width="154dp"
            android:layout_height="29dp"

            android:text=""
            android:hint="@string/reset"
            app:layout_constraintBottom_toBottomOf="@+id/signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.854"
            app:layout_constraintStart_toStartOf="@+id/e_pass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.81" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>