<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainback"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="283dp"
                android:layout_height="60dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="GENERATED GRAPH"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.197" />

            <Button
                android:id="@+id/dashboard"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="131dp"
                android:layout_height="43dp"
                android:alpha="0.7"
                android:background="@color/transparent"

                android:shadowColor="#009688"
                android:text="@string/dash"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/myplant"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="141dp"
                android:layout_height="43dp"
                android:alpha="1"
                android:background="@color/transparent"

                android:shadowColor="#009688"
                android:text="@string/myplant"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/aboutus"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="140dp"
                android:layout_height="43dp"
                android:alpha="0.7"
                android:background="@color/transparent"

                android:shadowColor="#009688"
                android:text="@string/aboutus"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/plantstat"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="158dp"
                android:layout_height="40dp"
                android:layout_marginTop="68dp"
                android:alpha="1"
                android:background="@color/green"
                android:shadowColor="#009688"
                android:text="@string/plantstat"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.138"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/report"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="68dp"
                android:alpha="0.8"
                android:background="@color/transparent"
                android:shadowColor="#009688"
                android:text="@string/report"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/appbar"
                layout="@layout/appbar"
                android:layout_width="417dp"
                android:layout_height="53dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </include>

        <ImageView
            android:id="@+id/varImg"
            android:layout_width="307dp"
            android:layout_height="282dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.559"
            app:srcCompat="@drawable/tempgraph" />

        <Button
            android:id="@+id/genGraph"
            android:layout_width="161dp"
            android:layout_height="70dp"
            android:background="@drawable/buttonstyle"
            android:text="Generate Graph"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.885" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>


